# skatebuddy

./: .gitignore  Cargo.toml  Makefile  Readme.md  disable_debug_interface.sh  rust-toolchain.toml
.cargo/: config.toml
drivers/: Cargo.toml
drivers-hw/: Cargo.toml
drivers-hw/src/: accel.rs  battery.rs  button.rs  buzz.rs  display.rs  flash.rs  gps.rs  hardware.rs  hrm.rs  lib.rs  mag.rs  time.rs  touch.rs  twi.rs  util.rs
drivers-shared/: Cargo.toml
drivers-shared/src/: accel.rs  battery.rs  buzz.rs  display.rs  gps.rs  hrm.rs  lib.rs  lpm013m1126c.rs  touch.rs
drivers-simu/: Cargo.toml
drivers-simu/src/: accel.rs  battery.rs  button.rs  buzz.rs  display.rs  flash.rs  futures.rs  gps.rs  hrm.rs  lib.rs  mag.rs  time.rs  touch.rs  util.rs  window.rs
drivers/src/: lib.rs
firmware/: .gitignore  Cargo.toml  build.rs  memory.x
firmware/src/: apps.rs  heartbeat.rs  main.rs  settings.rs  ui.rs  util.rs
firmware/src/apps/: accel.rs  batinfo.rs  clockinfo.rs  draw.rs  files.rs  hrm.rs  idle.rs  menu.rs  panic_msg.rs  stopwatch.rs  timer.rs  track.rs
hrm/: Cargo.toml
hrm/src/: lib.rs
src/: accel.rs  apps.rs  battery.rs  button.rs  display.rs  drivers.rs  flash.rs  gps.rs  hardware.rs  lpm013m1126c.rs  mag.rs  main.rs  time.rs  touch.rs  ui.rs  util.rs
src/apps/: accel.rs  batinfo.rs  clockinfo.rs  draw.rs  idle.rs  menu.rs
src/drivers/: accel.rs  button.rs  display.rs  touch.rs
tools/: analyze_hrm.py  calc_bat_coefficients.py  decode_files.sh  filter_output.py
tools/analyze_gps/: .gitignore  Cargo.toml
tools/analyze_gps/src/: main.rs
tools/analyze_hrm/: Cargo.toml
tools/analyze_hrm/src/: main.rs
util/: Cargo.toml
util/src/: gps.rs  heartbeat.rs  lib.rs
