[package]
name = "skatebuddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false  # <-

[dependencies]
cortex-m = { version = "0.7.7", features=["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-graphics = "0.8.1"
nrf52840-hal = "0.16.0"
