[package]
name = "skatebuddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = false  # <-

[dependencies]
arrform = "0.1.1"
bitmap-font = "0.3.0"
cortex-m = { version = "0.7.7", features=["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
embedded-graphics = "0.8.1"
nrf52840-hal = "0.16.0"
panic-probe = { version = "0.3.1", features=["print-defmt"] }
bytemuck = { version="1.14.0", features=["derive"] }


    #git = "https://github.com/embassy-rs/embassy.git",
embassy-executor = { version = "0.3.0", path = "../embassy/embassy-executor", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
]}
embassy-time = { version = "0.1.2", path="../embassy/embassy-time", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    #"defmt-timestamp-uptime",
]}
embassy-nrf = { path = "../embassy/embassy-nrf", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "nightly"
]}
embassy-futures = { path = "../embassy/embassy-futures" }
embassy-sync = { path = "../embassy/embassy-sync" }
embedded-hal-async = "1.0.0-rc.1"
core2 = { version = "0.4.0", default-features = false }
chrono = { version = "0.4.31", default-features = false }
bitvec = { version = "1.0.1", default-features = false }
num_enum = { version = "0.7.1", default-features = false }
embedded-io-async = "0.5.0"
util = { path = "./util" }
