[package]
name = "drivers-hw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrform = "0.1.1" #TODO: See if we can rid of this here, only used in one place
cortex-m = { version = "0.7.7", features=["critical-section-single-core"] }
log = { package = "defmt-or-log", version = "0.2.1", features=["defmt"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
embedded-graphics = "0.8.1"
nrf52840-hal = "0.16.0"
panic-probe = { version = "0.3.1", features=["print-defmt"] }
bytemuck = { version="1.14.0", features=["derive"] }

#embassy-executor = { version = "0.3.0", path = "../embassy/embassy-executor", features = [
embassy-executor = { git = "https://github.com/ftilde/embassy.git", branch="skatebuddy", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-131072",
]}
#embassy-time = { version = "0.1.2", path="../embassy/embassy-time", features = [
embassy-time = { git = "https://github.com/ftilde/embassy.git", branch="skatebuddy", features = [
    "defmt",
    #"defmt-timestamp-uptime",
]}
#embassy-nrf = { path = "../embassy/embassy-nrf", features = [
embassy-nrf = { git = "https://github.com/ftilde/embassy.git", branch="skatebuddy", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
]}
#embassy-futures = { path = "../embassy/embassy-futures" }
embassy-futures = { git = "https://github.com/ftilde/embassy.git", branch="skatebuddy" }
#embassy-sync = { path = "../embassy/embassy-sync" }
embassy-sync = { git = "https://github.com/ftilde/embassy.git", branch="skatebuddy" }
embedded-hal-async = "1.0.0-rc.3"
core2 = { version = "0.4.0", default-features = false }
chrono = { version = "0.4.31", default-features = false }
bitvec = { version = "1.0.1", default-features = false }
embedded-io-async = "0.6.0"
littlefs2 = "0.4.0"
static_cell = "2.0.0"
util = { path = "../util" }
drivers-shared = { path = "../drivers-shared" }
