[package]
name = "drivers-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
bytemuck = { version="1.14.0", features=["derive"] }
defmt = "0.3.5"
embedded-hal = "0.2.7"
embedded-graphics = "0.8.1"
embedded-hal-async = "1.0.0-rc.3"
num_enum = { version = "0.7.1", default-features = false }
