[package]
name = "drivers-simu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version="1.14.0", features=["derive"] }

chrono = { version = "0.4.31", default-features = false }
bitvec = { version = "1.0.1", default-features = false }
num_enum = { version = "0.7.1", default-features = false }
embedded-io-async = "0.6.0"
littlefs2 = "0.4.0"
defmt = "0.3.5"
defmt-print = "0.3.10"
