[package]
name = "skatebuddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = false  # <-

[dependencies]
arrform = "0.1.1"
bitmap-font = "0.3.0"
cortex-m-rt = "0.7.3"
embedded-graphics = "0.8.1"
bytemuck = { version="1.14.0", features=["derive"] }
chrono = { version = "0.4.31", default-features = false }
embedded-text = "0.7.0"
littlefs2 = "0.4.0"
micromath = "2.1.0"

drivers = { path = "../drivers" }
arrayvec = { version = "0.7.4", default-features = false }

[target.'cfg(target_arch = "arm")'.dependencies]
defmt = "0.3.5"
