[package]
name = "skatebuddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = false  # <-

[dependencies]
arrform = "0.1.1"
bitmap-font = "0.3.0"
cortex-m-rt = "0.7.3"
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
embedded-text = "0.7.0"
bytemuck = { version="1.14.0", features=["derive"] }
chrono = { version = "0.4.31", default-features = false }
littlefs2 = "0.4.0"
micromath = "2.1.0"
#biquad = "0.4.2"

drivers = { path = "../drivers" }
util = { path = "../util" }
hrm = { path = "../hrm" }
arrayvec = { version = "0.7.4", default-features = false }
base64 = { version = "0.21.7", default-features = false }
nalgebra = { version = "0.33.0", default-features = false }
embedded-icon = { version = "0.0.1", default-features = false, features=["24px", "mdi"] }

[target.'cfg(target_arch = "arm")'.dependencies]
defmt = "0.3.5"
