[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false }
nalgebra = { version = "0.33.0", default-features = false, features = ["libm"] }
drivers-shared = { path = "../drivers-shared" }
libm = "0.2.8"
